--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ local.properties
 /.idea/.name
 /.idea/migrations.xml
 /.idea/androidTestResultsUserPreferences.xml
+/.idea/inspectionProfiles/Project_Default.xml
